--- a/en/config.json
+++ b/en/config.json
@@ -1,7 +1,7 @@
 {
-  "additionalFooterText": "All content and images &copy; by Your Name Goes Here&nbsp;",
+  "additionalFooterText": "All content and images &copy; by Juan B. Gonzalez &nbsp;",
   "anchorCharacter": "#",
   "lineBreaks": "gfm",
-  "title": "Your wiki name",
+  "title": "BehEcon Wiki",
   "useSideMenu": true
 }
